# peachygrad

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  __init__.py  autograd.py  graph.py  loss.py  mm_bench.md  ops.py  test.py  test_backward.py  test_forward.py  testing.py  train_mnist.py
cc/: api.cc  api.h  base.h  bench.cc  kernels.cc  kernels.h  ops.cc  ops.h  peachyffi.cc  random.cc  random.h  tensor.cc  tensor.h
